--- a/Views/TicketHistories/Index.cshtml
+++ b/Views/TicketHistories/Index.cshtml
@@ -11,11 +11,9 @@
 </p>
 <table class="table">
     <tr>
+        
         <th>
-            @Html.DisplayNameFor(model => model.Ticket.SubmitterId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.User.FirstName)
+            @Html.DisplayName("Changed By")
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Property)
@@ -34,11 +32,9 @@
 
 @foreach (var item in Model) {
     <tr>
+        
         <td>
-            @Html.DisplayFor(modelItem => item.Ticket.SubmitterId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.User.FirstName)
+            @Html.DisplayFor(modelItem => item.User.FullName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Property)
@@ -47,6 +43,9 @@
             @Html.DisplayFor(modelItem => item.OldValue)
         </td>
         <td>
+            @*if(item.ProperName == "DeveloperId")
+                {*@
+
             @Html.DisplayFor(modelItem => item.NewValue)
         </td>
         <td>
