--- a/Views/Tickets/Details.cshtml
+++ b/Views/Tickets/Details.cshtml
@@ -1,106 +1,222 @@
-﻿@model AntTrak.Models.Ticket
+﻿@using AntTrak.Models
+@model Ticket
 
-@{
-    ViewBag.Title = "Details";
-}
+<div class="row">
 
-<h2>Details</h2>
+    <div class="col">
+        <div class="row">
+            <div class="card card-blue">
+                <div class="card-header">
+                    <h4 class="card-title">@ViewBag.CardTitle</h4>
+                    <div class="card-tools">
+                        <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
+                            <i class="fas fa-minus"></i>
+                        </button>
+                    </div>
+                </div>
+                @using (Html.BeginForm("Edit", "Tickets", FormMethod.Post, new { enctype = "Multipart/form-data" }))
+                {
+                    <div class="card-body">
+                        @Html.AntiForgeryToken()
+                        @Html.HiddenFor(Model => Model.ProjectId)
+                        @Html.HiddenFor(Model => Model.SubmitterId)
+                        @Html.HiddenFor(Model => Model.Title)
+                        @Html.HiddenFor(Model => Model.Created)
+                        @Html.HiddenFor(Model => Model.TicketStatusId)
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        <div class="row">
+                            @*row for select input*@
+                            <div class="col">
+                                <div class="form-group">
+                                    <div class="row">
+                                        <div class="col-6">
+                                            @if (ViewBag.MyRole == "Submitter" || ViewBag.MyRole == "Developer")
+                                            {
+                                                @Html.DropDownList("DeveloperId", null, "Unassigned", new { @class = "form-control disabled" })
+                                            }
+                                            else
+                                            {
+                                                @Html.DropDownList("DeveloperId", null, "Assign Developer", new { @class = "form-control" })
+                                            }
 
-<div>
-    <h4>Ticket</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Developer.FirstName)
-        </dt>
+                                            @Html.ValidationMessageFor(model => model.DeveloperId, "", new { @class = "text-danger" })
+                                        </div>
+                                        <div class="col-6">
+                                            @if (User.IsInRole("Submitter"))
+                                            {
+                                                @Html.DropDownList("TicketStatusId", null, null, new { @class = "form-control disabled" })
+                                            }
+                                            else
+                                            {
+                                                @Html.DropDownList("TicketStatusId", null, null, new { @class = "form-control" })
+                                            }
 
-        <dd>
-            @Html.DisplayFor(model => model.Developer.FirstName)
-        </dd>
+                                            @Html.ValidationMessageFor(model => model.TicketStatusId, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col">
+                                            @Html.DropDownList("TicketPriorityId", null, null, new { @class = "form-control" })
+                                            @Html.ValidationMessageFor(model => model.TicketPriorityId, "", new { @class = "text-danger" })
+                                        </div>
+                                        <div class="col">
+                                            @Html.DropDownList("TicketTypeId", null, null, new { @class = "form-control" })
+                                            @Html.ValidationMessageFor(model => model.TicketTypeId, "", new { @class = "text-danger" })
+                                            <br />
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col">
+                                            <div class="row">
+                                                @Html.Label("Submitter")
+                                            </div>
+                                            <div class="row">
+                                                @Model.Submitter.Fullname
+                                            </div>
+                                        </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Project.Name)
-        </dt>
+                                        <div class="col">
+                                            <div class="row">
+                                                @Html.Label("Created")
+                                            </div>
+                                            <div class="row">
+                                                @Model.Created.ToString("MMM, dd, yyyy")
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> @*row for select column*@
+                        <div class="row">
+                            <div class="col">
+                                @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-5" })
 
-        <dd>
-            @Html.DisplayFor(model => model.Project.Name)
-        </dd>
+                                @Html.TextArea("Description", new { @class = "form-control h-100" })
+                                @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+                                <br />
+                            </div>
+                        </div>
+                    </div><!-- /.card-body -->
+                    <div class="card-footer">
+                        <div class="row">
+                            <br />
+                            <div class="col">
+                                <input type="submit" value="Save" class="form-control btn btn-primary" />
+                            </div>
+                            <div class="col">
+                                @Html.ActionLink("Back to List", "Index", null, new { @class = "form-control btn btn-dark" })
+                            </div>
+                        </div>
+                    </div> <!-- /.card-footer-->
+                }
+            </div><!-- /.card -->
+        </div>
+        <div class="row">
+            <div class="card card-primary">
+                <div class="card-header">
+                    <h3 class="card-title">Attachments</h3>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Submitter.FirstName)
-        </dt>
+                    <div class="card-tools">
+                        <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
+                            <i class="fas fa-minus"></i>
+                        </button>
+                        <button type="button" class="btn btn-tool" data-card-widget="remove" data-toggle="tooltip" title="Remove">
+                            <i class="fas fa-times"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="card-body">
+                    Start creating your amazing application!
+                </div>
+                <!-- /.card-body -->
+                <div class="card-footer">
+                    Footer
+                </div>
+                <!-- /.card-footer-->
+            </div>
+            <!-- /.card -->
 
-        <dd>
-            @Html.DisplayFor(model => model.Submitter.FirstName)
-        </dd>
+        </div>
+    </div> @*top row of cards*@
+    <div class="col">
+        <div class="card card-primary">
+            <div class="card-header">
+                <h3 class="card-title">Comments</h3>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.TicketPriority.Name)
-        </dt>
+                <div class="card-tools">
+                    <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
+                        <i class="fas fa-minus"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="card-body">
+                    <div class="direct-chat-messages">
+                        <!-- Message. Default to the left -->
+                        @foreach (var comment in Model.Comments.OrderBy(c => c.Created).ToList())
+                        {
+                            <div class="direct-chat-msg">
+                                <div class="direct-chat-infos clearfix">
+                                    <span class="direct-chat-name float-left">@comment.User.Fullname</span>
+                                    @{
+                                        var commentDate = comment.Updated != null ? comment.Updated : comment.Created;
+                                    }
+                                    <span class="direct-chat-timestamp float-right">@commentDate</span>
+                                </div>
+                                <!-- /.direct-chat-infos -->
+                                @*<img class="direct-chat-img" src="dist/img/user1-128x128.jpg" alt="message user image">*@
+                                <!-- /.direct-chat-img -->
+                                <div class="direct-chat-text">
+                                    @comment.Body
+                                </div>
+                                <!-- /.direct-chat-text -->
+                            </div> <!-- /.direct-chat-msg -->
+                            <!-- /.direct-chat-msg -->
+                        }
+                    </div>
+                    <!-- /.card-body -->
+                    <div class="card-footer">
+                        @using (Html.BeginForm("Create", "TicketComments", FormMethod.Post, null))
+                        {
+                            @Html.AntiForgeryToken()
+                            @Html.Hidden("ticketId", Model.Id)
 
-        <dd>
-            @Html.DisplayFor(model => model.TicketPriority.Name)
-        </dd>
+                            <div class="input-group">
+                                <input type="text" name="commentBody" placeholder="Type Comment ..." class="form-control">
+                                <span class="input-group-append">
+                                    <button type="submit" class="btn btn-primary">Add</button>
+                                </span>
+                            </div>
+                        }
+                    </div>
+                    <!-- /.card-footer-->
+                </div>
+                <!-- /.card -->
 
-        <dt>
-            @Html.DisplayNameFor(model => model.TicketStatus.Name)
-        </dt>
+            </div>
+            <div class="row">
+                <div class="card card-primary">
+                    <div class="card-header">
+                        <h3 class="card-title">Ticket History</h3>
+                        <div class="card-tools">
+                            <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
+                                <i class="fas fa-minus"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="card-body">
 
-        <dd>
-            @Html.DisplayFor(model => model.TicketStatus.Name)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.TicketType.Name)
-        </dt>
+                        Ticket History Table goes here
+                    </div>
+                    <!-- /.card-body -->
+                    <div class="card-footer">
 
-        <dd>
-            @Html.DisplayFor(model => model.TicketType.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Created)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Created)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Updated)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Updated)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IsArchived)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsArchived)
-        </dd>
-
-    </dl>
+                    </div>
+                    <!-- /.card-footer-->
+                </div>
+                <!-- /.card -->
+            </div>
+        </div>
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
